--- a/src/StoreOfBuild.Web/appsettings.Staging.json
+++ b/src/StoreOfBuild.Web/appsettings.Staging.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:module8.database.windows.net,1433;Initial Catalog=StoreOfBuild_BD;Persist Security Info=False;User ID=user_module8;Password=@module10;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=StoreOfBuildDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "XXDefaultConnection": "Server=tcp:module8.database.windows.net,1433;Initial Catalog=StoreOfBuild_BD;Persist Security Info=False;User ID=user_module8;Password=@module10;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
